cmake_minimum_required(VERSION 3.8)
project(reverse-engineering-c)

set(CMAKE_C_STANDARD 99)

add_subdirectory(c-file-access)
add_subdirectory(c-library-dynamic)
add_subdirectory(c-linked-list-api-exercise)
add_subdirectory(c-secret)
add_subdirectory(c-system-calls)
add_subdirectory(c-function_call)
add_subdirectory(c-library-static)
add_subdirectory(c-linked-list-user)
add_subdirectory(c-memory-segments)
add_subdirectory(c-stack)
add_subdirectory(c-test-framework)
add_subdirectory(c-heap)
add_subdirectory(c-linked-list)
add_subdirectory(c-linked-list-user-exercise)
add_subdirectory(c-pointers)
add_subdirectory(c-stack-exercise)
add_subdirectory(c-tree)
add_subdirectory(c-helloworld)
add_subdirectory(c-linked-list-api)
add_subdirectory(c-queue)
add_subdirectory(c-struct)
add_subdirectory(c-tree-api)


